@@ -86,7 +86,7 @@ nobase_python_PYTHON = \
 	slc/input/parse.py \
 	slc/input/cm4.py \
 	slc/input/check.py \
-	slc/front/__init__.py,
+	slc/front/__init__.py \
 	slc/front/main.py \
 	slc/front/chains.py \
 	slc/front/dump.py \
